# desk-thing

./: readme.md
client/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
client/src/routes/: +page.svelte  settings.ts
client/src/routes/components/: launcher.svelte  time.svelte
client/src/routes/components/spotify/: helpers.ts  player.svelte
client/src/routes/components/weather/: weather.svelte  wmo.ts
server/: Cargo.toml  config.example.json
server/src/: main.rs
