[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["full"]}
base64 = "0.22.1"
crossterm = "0.28.1"
